--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "main.js",
   "dependencies": {
-    "discord.js": "^13.0.0-dev.e980948de55e91e59c9e3293ac76bc645a058a53"
+    "discord.js": "^13.0.0-dev.e980948de55e91e59c9e3293ac76bc645a058a53",
+    "mongoose": "^5.12.13"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
