--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "",
   "main": "main.js",
   "dependencies": {
-    "discord.js": "^13.0.0-dev.35c2225f5035fce47b0defc12754bda5901a453c",
-    "mongoose": "^5.12.13"
+    "@discordjs/voice": "^0.3.0",
+    "discord.js": "^13.0.0-dev.fbcbb29884a35308a7af2169f5f9ae5658c458e8",
+    "mongoose": "^5.12.13",
+    "timers": "^0.1.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
