--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@discordjs/voice": "^0.3.0",
     "discord.js": "^13.0.0-dev.f7eeccba4b7015496df811f10cc2da2b0fab0630",
     "mongoose": "^5.12.13",
+    "redis": "^3.1.2",
     "timers": "^0.1.1"
   },
   "scripts": {
