--- a/package.json
+++ b/package.json
@@ -4,9 +4,13 @@
   "description": "",
   "main": "main.js",
   "dependencies": {
+    "@discordjs/voice": "^0.5.0",
     "discord.js": "^13.0.0-dev.a3cbcca13da1af416c219bd64a0a6e84bb87a057",
     "lavalink": "^2.11.0",
+    "libsodium-wrappers": "^0.7.9",
+    "module-alias": "^2.2.2",
     "mongoose": "^5.12.13",
+    "prism-media": "^1.3.1",
     "timers": "^0.1.1"
   },
   "scripts": {
