--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "libsodium-wrappers": "^0.7.9",
     "module-alias": "^2.2.2",
     "mongoose": "^5.12.13",
-    "prism-media": "^1.3.1",
-    "timers": "^0.1.1"
+    "prism-media": "^1.3.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
