--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
   "dependencies": {
     "@discordjs/voice": "^0.5.0",
     "discord-rpc": "^4.0.1",
-    "discord.js": "^13.0.0-dev.1f8f3ab0f8dbd346154bbfa14a98726b8df25d57",
+    "discord.js": "^13.0.0-dev.c850ae10270076c4b2e10b130dd8f88eed4ed201",
     "lavalink": "^2.11.0",
     "libsodium-wrappers": "^0.7.9",
     "module-alias": "^2.2.2",
     "mongoose": "^5.12.13",
-    "prism-media": "^1.3.1"
+    "prism-media": "^1.3.1",
+    "quick.db": "^7.1.3"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
