--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "main": "main.js",
   "dependencies": {
     "@discordjs/voice": "^0.5.0",
+    "better-sqlite3": "^7.4.1",
     "discord-rpc": "^4.0.1",
     "discord.js": "^13.0.0-dev.c850ae10270076c4b2e10b130dd8f88eed4ed201",
     "lavalink": "^2.11.0",
     "libsodium-wrappers": "^0.7.9",
     "module-alias": "^2.2.2",
     "mongoose": "^5.12.13",
+    "nodemon": "^2.0.7",
     "prism-media": "^1.3.1",
     "quick.db": "^7.1.3"
   },
