--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "ytdl-core": "^4.8.2"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon main.js"
   },
   "keywords": [],
   "author": "",
