--- a/package.json
+++ b/package.json
@@ -4,18 +4,11 @@
   "description": "",
   "main": "main.js",
   "dependencies": {
-    "@discordjs/opus": "^0.5.3",
     "@discordjs/voice": "^0.5.0",
     "axios": "^0.21.1",
-    "discord-player": "^5.0.0-dev.1d88db17117d79a26967895675c17f117e52878d",
-    "discord-rpc": "^4.0.1",
+    "canvas": "^2.8.0",
     "discord.js": "^13.0.0-dev.c850ae10270076c4b2e10b130dd8f88eed4ed201",
-    "ffmpeg-static": "^4.4.0",
-    "lavalink": "^2.11.0",
-    "libsodium-wrappers": "^0.7.9",
-    "module-alias": "^2.2.2",
     "mongoose": "^5.12.13",
-    "prism-media": "^1.3.1",
     "yt-search": "^2.9.0",
     "ytdl-core": "^4.8.2"
   },
@@ -23,6 +16,6 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "UndiedGamer",
   "license": "ISC"
 }
