--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "@discordjs/voice": "^0.5.0",
     "axios": "^0.21.1",
     "canvas": "^2.8.0",
-    "discord.js": "^13.0.0-dev.c850ae10270076c4b2e10b130dd8f88eed4ed201",
+    "discord.js": "^13.0.0-dev.56b5b7e.1625313788",
     "mongoose": "^5.12.13",
     "yt-search": "^2.9.0",
     "ytdl-core": "^4.8.2"
